...
    val route: String,
    @StringRes
    val resourceId: Int,
    @DrawableRes
    val iconId: Int = R.drawable.fitness_center,
    val icon: ImageVector? = null,
    val testTag: String = "NavItem"
) {
    open fun routeWithArgs(vararg args: String): String {
        return route
    }

    data object Settings : LiftingLogScreen(
...
